# jtempl

./: .gitignore  README.md  config.yaml  pyproject.toml
src/jtempl/: cli.py  template_builder.py
