[build-system]
requires = ["setuptools>=79.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtempl"
version = "0.1.0"
description = "CLI tool to generate Jupyter notebook templates from YAML"
requires-python = ">=3.11"
dependencies = [
    "nbformat==5.10.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
jtempl = "jtempl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
